parse-display-tests/tests/compile_fail/display/invalid_with_enum.stderr
error: `#[display("format")]` is required except unit variant.
 --> tests/compile_fail/display/invalid_with_enum.rs:5:5
  |
5 |     A(#[display(with = unknown)] u32),
  |     ^
